--- a/dog-project/dog_app.html
+++ b/dog-project/dog_app.html
@@ -14322,6 +14322,8 @@ test_{network} = bottleneck_features['test']</code></pre>
 <ul>
 <li>预先训练好的bottleneck 先通过一层全局平均池化层，再通过一个全连接层输出分类结果。 全局平均池化层对比普通的的全连接层可以极大的降低模型的参数，对整个网路在结构上做正则化防止过拟合，最后的全连接输出层可以得到各个分类的概率值。</li>
 <li>VGG系列模型网络结构简洁，通过增加网络深度来提高分类准确率，VGG19的网络结构比VGG16更深，因此可以用在这个问题上。</li>
+<li>VGG19成功的原因：1.网络深度足够，可以进行高级特征提取. 2.预先训练通过ImageNet大量的数据训练，可以保证特征提取足够准确</li>
+<li>步骤3准确率不足的原因： 1.对于狗狗分类问题，此模型过于简单，提取不到高级抽象的特征。2. 133种狗狗总共训练图片才8000多张，数据集不足。</li>
 </ul>
 
 </div>
